--- a/resume/index.html
+++ b/resume/index.html
@@ -85,7 +85,7 @@
                 <li>Architected the new url structure for the new platform</li>
                 <li>Elevated CareerBuilder to the first page of Google results with changes- adding canonical urls, correcting redirect codes, enforcing a url standard, appropriately adding status codes to pages, adding expired tags to pages, adding microdata</li>
                 <li>Hired and mentored a seasonal intern</li>
-                <li>[Get the numbers, because those are pretty cool.]</li>
+                <li class="hide-for-print">[Get the numbers, because those are pretty cool.]</li>
               </ul>
             <div><b>Engineering Lead:</b></div>
               <ul>
@@ -102,7 +102,7 @@
                 <li>SASS, CoffeeScript, HAML</li>
                 <li>Tools: GitHub, CodeClimate, NewRelic, Mingle</li>
                 <li>Processes: Code Reviews, Story Mapping, Scrum, Agile (with many ceremonies)</li>
-                <li>Switching from .net to Ruby on Rails platform</li>
+                <li>Migrated major site pages from .net to Ruby on Rails platform</li>
                 <li>Created tools for developers to use (one-button deploy to production, internal deploy to shared staging environments, simple viewing of just our Usabilla comments, the addition of cat pictures interspersed within Usabilla comment viewing to ease the pain of reading user comments...)</li>
               </ul>
           </div>
