Helps to save first.

--- a/resume/index.html
+++ b/resume/index.html
@@ -92,7 +92,7 @@
                 <li>Maintained a 50/50 split between coding and managing</li>
                 <li>Served as an Engineering Lead in an unofficial capacity for over a year prior to receiving title</li>
                 <li>Met with Product Owners (including Chief Product Officer) to determine feasibility and scope of work on projects</li>
-                <li>Working with developers to break down projects in to manageable, devliverable, iterable chunks of work</li>
+                <li>Working with developers to break down projects in to manageable, deliverable, iterable chunks of work</li>
                 <li>Checked user reports (Usabilla), GTM numbers, to determine next projects, to find bugs, etc... (reading between the lines to determine pain points)</li>
               </ul>
             <div><b>Generally:</b></div>
