--- a/resume/index.html
+++ b/resume/index.html
@@ -88,7 +88,7 @@
               </ul>
             <div><b>Engineering Lead:</b></div>
               <ul>
-                <li>Led a team of 2-3 Engineers</li>
+                <li>Led a team of 2-4 Engineers, including mentoring in career path, building skills, interviewing candidates, regular meetings, giving feedback on performance, and reviewing code</li>
                 <li>Maintained a 50/50 split between coding and managing</li>
                 <li>Served as an Engineering Lead in an unofficial capacity for over a year prior to receiving title</li>
                 <li>Met with Product Owners (including Chief Product Officer) to determine feasibility and scope of work on projects</li>
@@ -97,12 +97,12 @@
               </ul>
             <div><b>Generally:</b></div>
               <ul>
-                <li>Languages: Ruby on Rails, .net</li>
+                <li>Languages: Ruby on Rails, C#, .net</li>
                 <li>SASS, CoffeeScript, HAML</li>
-                <li>Tools: GitHub, CodeClimate, NewRelic, Mingle</li>
+                <li>Tools: GitHub, CodeClimate, NewRelic, Jira, HipChat</li>
                 <li>Processes: Code Reviews, Story Mapping, Scrum, Agile (with many ceremonies)</li>
                 <li>Migrated major site pages from .net to Ruby on Rails platform</li>
-                <li>Created tools for developers to use (one-button deploy to production, internal deploy to shared staging environments, simple viewing of just our Usabilla comments, the addition of cat pictures interspersed within Usabilla comment viewing to ease the pain of reading user comments...)</li>
+                <li>Created tools for developers to use (one-button deploy to production, internal deploy to shared staging environments, simple viewing of just our Usabilla comments, the addition of cat pictures interspersed within user feedback viewing to help ease the pain of reading user comments...)</li>
               </ul>
           </div>
         </div>
