--- a/resume/index.html
+++ b/resume/index.html
@@ -24,7 +24,6 @@
             <h1><span itemprop="name">Alex Bowers Schoen</span></h1>
           </div>
            <div class="horiz-items text-bottom small-12 large-6 columns">
-            <span class="contact-info" itemprop="address">Decatur, GA</span>
             <span class="contact-info show-for-print"><a href="https://bowersaa.github.io/resume/">Resume</a></span>
             <span class="contact-info hide-for-print" title="@palila on Twitter" rel="me" itemprop="url"><a href="https://twitter.com/Palila">@Palila</a></span>
             <span class="contact-info hide-for-print" title="bowersaa on GitHub" rel="me" itemprop="url"><a href="http://github.com/bowersaa">GitHub</a></span>
@@ -94,6 +93,8 @@
                 <li>Met with Product Owners (including Chief Product Officer) to determine feasibility and scope of work on projects</li>
                 <li>Working with developers to break down projects in to manageable, deliverable, iterable chunks of work</li>
                 <li>Checked user reports (Usabilla), GTM numbers, to determine next projects, to find bugs, etc... (reading between the lines to determine pain points)</li>
+                <li>Promoted the code review process</li>
+                <li>Advocated for mobile first design, reusable, dry css</li>
               </ul>
             <div><b>Generally:</b></div>
               <ul>
