--- a/resume/index.html
+++ b/resume/index.html
@@ -73,6 +73,21 @@
           </div>
 
           <div class="job-details small-12 columns" itemprop="description">
+            <div><b>Engineering Lead:</b></div>
+              <ul>
+                <li>Led a team of 2-4 Engineers, including mentoring in career path, building skills, interviewing candidates, regular meetings, giving feedback on performance, and reviewing code</li>
+                <li>Maintained a 50/50 split between coding and managing</li>
+                <li>Served as an Engineering Lead in an unofficial capacity for over a year prior to receiving title</li>
+                <li>Met with Product Owners (including Chief Product Officer) to determine feasibility and scope of work on projects</li>
+                <li>Worked with other developers to break down projects into manageable, deliverable, iterable chunks of work</li>
+                <li>Checked user reports (Usabilla and Qualtrix), Google Analytics numbers, trying to read between the lines to determine pain points in order to propose next projects, find bugs, and find small tweaks to improve the user experience</li>
+                <li>Promoted the code review process</li>
+                <li>Advocated for mobile first design, and reusable, dry css</li>
+                <li>Deployed our code on a regular basis (instead of letting deployable prs stack up)</li>
+                <li>Acted as Product Owner when the team's PO was lacking/nonexistent/new/had knowledge gaps</li>
+                <li>Gave presentations about completed work in front of the board</li>
+                <li></li>
+              </ul>
             <div><b>Major projects:</b></div>
               <ul>
                 <li>Managed the conversion of two of our three top pages (Job Results and Job Details) from our legacy system to the new Ruby on Rails platform. Most notably, made a detailed conversion plan, so we had no drop in indexing from major search engines, and also no major outages as a result of the conversion.</li>
@@ -84,17 +99,6 @@
                 <li>Architected the new url structure for the new platform</li>
                 <li>Elevated CareerBuilder to the first page of Google results with changes- adding canonical urls, correcting redirect codes, enforcing a url standard, appropriately adding status codes to pages, adding expired tags to pages, adding microdata</li>
                 <li>Hired and mentored a seasonal intern</li>
-              </ul>
-            <div><b>Engineering Lead:</b></div>
-              <ul>
-                <li>Led a team of 2-4 Engineers, including mentoring in career path, building skills, interviewing candidates, regular meetings, giving feedback on performance, and reviewing code</li>
-                <li>Maintained a 50/50 split between coding and managing</li>
-                <li>Served as an Engineering Lead in an unofficial capacity for over a year prior to receiving title</li>
-                <li>Met with Product Owners (including Chief Product Officer) to determine feasibility and scope of work on projects</li>
-                <li>Working with developers to break down projects in to manageable, deliverable, iterable chunks of work</li>
-                <li>Checked user reports (Usabilla), GTM numbers, to determine next projects, to find bugs, etc... (reading between the lines to determine pain points)</li>
-                <li>Promoted the code review process</li>
-                <li>Advocated for mobile first design, reusable, dry css</li>
               </ul>
             <div><b>Generally:</b></div>
               <ul>
@@ -123,6 +127,7 @@
                 <li>Printable posters for physical job boards that gave users a QR-apply method (instead of having to write everything down and apply to jobs later, or take easy-to-lose tear slips)</li>
                 <li>Local search (maps on the job results page!)</li>
                 <li>A tool that gives us visibility into relevancy improvements, to compare against the current results, and a second project that actually made relevancy improvements (2 projects won at the same event)</li>
+                <li>Buzzfeed-style FB quiz that gave you results based on your resume upload & categorization</li>
               </ul>
               <li>2015 Diamond Club winner - the highest award that CareerBuilder gives</li>
               <li>Speaker at an internal CareerBuilder Topic of Interest program on the technical aspects of the SEO improvements</li>
