--- a/resume/index.html
+++ b/resume/index.html
@@ -75,7 +75,7 @@
           <div class="job-details small-12 columns" itemprop="description">
             <div><b>Engineering Lead:</b></div>
               <ul>
-                <li>Led a team of 2-4 Engineers, including mentoring in career path, building skills, interviewing candidates, regular meetings, giving feedback on performance, and reviewing code</li>
+                <li>Led a team of 2-4 Engineers, including mentoring in career path, building skills, interviewing and hiring candidates, regular meetings, giving feedback on performance, elevating performance, and reviewing code</li>
                 <li>Maintained a 50/50 split between coding and managing</li>
                 <li>Served as an Engineering Lead in an unofficial capacity for over a year prior to receiving title</li>
                 <li>Met with Product Owners (including Chief Product Officer) to determine feasibility and scope of work on projects</li>
@@ -86,6 +86,8 @@
                 <li>Deployed our code on a regular basis (instead of letting deployable prs stack up)</li>
                 <li>Acted as Product Owner when the team's PO was lacking/nonexistent/new/had knowledge gaps</li>
                 <li>Gave presentations about completed work in front of the board</li>
+                <li>Inherited a new code base </li>
+                <li>Worked with our China team to bring them up to speed on our main Ruby code</li>
                 <li></li>
               </ul>
             <div><b>Major projects:</b></div>
@@ -96,7 +98,7 @@
             <div><b>On the SEO Team:</b></div>
               <ul>
                 <li>Started as the only developer with this team, and grew the team of developers</li>
-                <li>Architected the new url structure for the new platform</li>
+                <li>Architected the url structure for the new platform</li>
                 <li>Elevated CareerBuilder to the first page of Google results with changes- adding canonical urls, correcting redirect codes, enforcing a url standard, appropriately adding status codes to pages, adding expired tags to pages, adding microdata</li>
                 <li>Hired and mentored a seasonal intern</li>
               </ul>
