--- a/resume/index.html
+++ b/resume/index.html
@@ -88,7 +88,8 @@
                 <li>Gave presentations about completed work in front of the board</li>
                 <li>Inherited a new code base </li>
                 <li>Worked with our China team to bring them up to speed on our main Ruby code</li>
-                <li></li>
+                <li>Pioneered the movement in the team to work as a more distributed team</li>
+                <li>Became the queen of NewRelic reporting/alerting/etc... I spent a lot of time with NRQL</li>
               </ul>
             <div><b>Major projects:</b></div>
               <ul>
