Clean up/out old job experience

--- a/resume/index.html
+++ b/resume/index.html
@@ -203,7 +203,7 @@
 
               <div><b>On all projects:</b></div>
               <ul>
-                <li class="work-item">Met with both upper-level management and store-level associates to develop reasonable requirements and documentation for projects</li>
+                <li class="work-item">Developed reasonable requirements and documentation for projects in partnership with both upper-level management and store-level associates</li>
                 <li class="work-item">Collaborated with internal .com, .ca, and Customer Experience teams, translators, and outside vendors to develop and then implement customer-facing UI to ensure seamless transition from homedepot.com and homedepot.ca to our applications</li>
                 <li class="work-item">Coordinated major software deployments for my applications with .com team when large site changes occurred</li>
                 <li class="work-item">Created and presented page mock-ups for approval by stakeholders</li>
@@ -244,31 +244,6 @@
                   <li>Built Flash-based, XML-driven display widgets, customizable through a Flex editor</li>
                   <li>Created dynamic course reporting and user management tools in Flex</li>
                 </ul>
-              </ul>
-            </div>
-          </div>
-
-          <hr>
-
-          <div class="job">
-            <div class="job-overview">
-              <div class="employer-info small-12 large-6 columns">
-                <h3><span>Pario, Inc.</span></h3>
-              </div>
-              <div class="location small-12 medium-6 large-2 columns">Atlanta, GA </div>
-              <div class="dates small-12 medium-6 large-4 columns"><i>November 2005-October 2007</i></div>
-              <div class="small-12 columns">
-                <h4 class="job-title">Programmer/Flash Developer</h4>
-              </div>
-            </div>  
-
-            <div class="job-details small-12 columns">
-              <div>Pario, Inc. was an award-winning interactive communications, marketing and learning company.</div>
-              <ul>
-                <li>Developed engaging, adaptive learning interactivities for online educational courses</li>
-                <li>Provided ideas for user interface improvement during the design process, based on and backed up by established usability principles (Section 508 compatibility and W3C standards)</li>
-                <li>Created original artwork, animations and graphics to enrich the user's learning experience</li>
-                <li>Assisted in the development of a proprietary course-building application</li>
               </ul>
             </div>
           </div>
