--- a/resume/index.html
+++ b/resume/index.html
@@ -6,7 +6,7 @@
     <title>Alex Bowers Schoen</title>
 
     <meta name="description" content="Alex Bowers Schoen - Software Engineer with over 10 years of experience in a range of technologies">
-    <meta name="keywords" content="web,developer,ruby,rails,resume" />
+    <meta name="keywords" content="web,developer,ruby,rails,resume,management,engineer,software" />
     <meta name="author" content="Alex Bowers Schoen">
 
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,300i,400,700" rel="stylesheet">
@@ -62,7 +62,7 @@
                     <li>
                       <span class="horiz-items">
                         <span>Software Engineer II</span>
-                        <span>Dec 2013 - May 2014</span>
+                        <span>Dec 2013 - May 2015</span>
                       </span>
                     </li>
                   </ul>
@@ -75,21 +75,22 @@
           <div class="job-details small-12 columns" itemprop="description">
             <div><b>Engineering Lead:</b></div>
               <ul>
-                <li>Led a team of 2-4 Engineers, including mentoring in career path, building skills, interviewing and hiring candidates, regular meetings, giving feedback on performance, elevating performance, and reviewing code</li>
+                <li>Managed and mentored a team of 4 Engineers, including mentoring in career path, building skills, interviewing and hiring candidates, regular meetings, giving feedback on performance, elevating performance, and reviewing code</li>
                 <li>Maintained a 50/50 split between coding and managing</li>
                 <li>Served as an Engineering Lead in an unofficial capacity for over a year prior to receiving title</li>
-                <li>Met with Product Owners (including Chief Product Officer) to determine feasibility and scope of work on projects</li>
-                <li>Worked with other developers to break down projects into manageable, deliverable, iterable chunks of work</li>
-                <li>Checked user reports (Usabilla and Qualtrix), Google Analytics numbers, trying to read between the lines to determine pain points in order to propose next projects, find bugs, and find small tweaks to improve the user experience</li>
-                <li>Promoted the code review process</li>
-                <li>Advocated for mobile first design, and reusable, dry css</li>
-                <li>Deployed our code on a regular basis (instead of letting deployable prs stack up)</li>
-                <li>Acted as Product Owner when the team's PO was lacking/nonexistent/new/had knowledge gaps</li>
-                <li>Gave presentations about completed work in front of the board</li>
+                <li>Partnered with Product Owners (including Chief Product Officer) to determine feasibility and scope of work on projects</li>
+                <li>Collaborated with other developers to break down projects into manageable, deliverable, and iterable chunks of work</li>
+                <li>Evaluated user reports (in Usabilla and Qualtrix) and Google Analytics numbers to understand pain points and used this information to propose next projects, find bugs, and improve the Jobseeker experience</li>
+                <li>Promoted the code review process, mentoring new hires in the process, training new team members on it, and became the merge master for the department</li>
+                <li>Advocated for mobile first design and reusable, dry CSS</li>
+                <li>Deployed our code on a regular basis to mitigate risk from large deployments, ensure ease of monitoring, and prevent stagnation of approved code</li>
+                <li>Served as Product Owner at critical times to ensure project success</li>
+                <li>Delivered presentations about key project accomplishments to executives</li>
                 <li>Inherited a new code base </li>
-                <li>Worked with our China team to bring them up to speed on our main Ruby code</li>
-                <li>Pioneered the movement in the team to work as a more distributed team</li>
-                <li>Became the queen of NewRelic reporting/alerting/etc... I spent a lot of time with NRQL</li>
+                <li>Served as the key liaison to our China team to ensure a smooth onboarding experience with our main Ruby code, and served as their technical mentor</li>
+                <li>Pioneered movement in the department to work as a more distributed team</li>
+                <li>Served as the department's main NewRelic contact, including setting up monitoring, general alerting, and creating customized, cross-team PagerDuty alerts in NRQL</li>
+                <li>Created tools for developers to use (one-button deploy to production, internal deploy to shared staging environments, simple viewing of just our Usabilla comments, the addition of cat pictures interspersed within user feedback viewing to help ease the pain of reading user comments...)</li>
               </ul>
             <div><b>Major projects:</b></div>
               <ul>
@@ -100,17 +101,16 @@
               <ul>
                 <li>Started as the only developer with this team, and grew the team of developers</li>
                 <li>Architected the url structure for the new platform</li>
-                <li>Elevated CareerBuilder to the first page of Google results with changes- adding canonical urls, correcting redirect codes, enforcing a url standard, appropriately adding status codes to pages, adding expired tags to pages, adding microdata</li>
+                <li>Elevated CareerBuilder to the first page of Google results with changes by adding canonical urls, status codes as appropriate, expired tags, and microdata, while also correcting redirect codes and enforcing a url standard</li>
                 <li>Hired and mentored a seasonal intern</li>
               </ul>
-            <div><b>Generally:</b></div>
+            <div><b>Key Skills and Knowledge:</b></div>
               <ul>
                 <li>Languages: Ruby on Rails, C#, .net</li>
                 <li>SASS, CoffeeScript, HAML</li>
                 <li>Tools: GitHub, CodeClimate, NewRelic, Jira, HipChat</li>
-                <li>Processes: Code Reviews, Story Mapping, Scrum, Agile (with many ceremonies)</li>
+                <li>Processes: Code Reviews, Story Mapping, Scrum, Agile (with many ceremonies), Kanban</li>
                 <li>Migrated major site pages from .net to Ruby on Rails platform</li>
-                <li>Created tools for developers to use (one-button deploy to production, internal deploy to shared staging environments, simple viewing of just our Usabilla comments, the addition of cat pictures interspersed within user feedback viewing to help ease the pain of reading user comments...)</li>
               </ul>
           </div>
         </div>
@@ -124,13 +124,13 @@
 
           <div class="job-details small-12 columns">
             <ul>
-              <li>Won several internal CareerBuilder Hackathons</li>
+              <li>Won several internal CareerBuilder Hackathons with the following projects:</li>
               <ul>
-                <li>A project that gave people the ability to read Mingle cards, without expensive licenses or needing to have project access</li>
-                <li>Printable posters for physical job boards that gave users a QR-apply method (instead of having to write everything down and apply to jobs later, or take easy-to-lose tear slips)</li>
-                <li>Local search (maps on the job results page!)</li>
-                <li>A tool that gives us visibility into relevancy improvements, to compare against the current results, and a second project that actually made relevancy improvements (2 projects won at the same event)</li>
-                <li>Buzzfeed-style FB quiz that gave you results based on your resume upload & categorization</li>
+                <li>Giving non-developers the ability to read Mingle cards and their status, without expensive licenses or needing to have project access</li>
+                <li>Creating printable posters for physical job boards that gave users a QR-apply method, ensuring a seamless digital rather than easy-to-lose manual experience</li>
+                <li>Implementing local search (maps on the job results page!)</li>
+                <li>Creating a tool that gives us visibility into relevancy improvements to compare against the current results, and a second project that implemented some improvements (2 projects won at the same event)</li>
+                <li>Designing and implementing a Buzzfeed-style FB quiz that gave users results based on their resume upload and categorization</li>
               </ul>
               <li>2015 Diamond Club winner - the highest award that CareerBuilder gives</li>
               <li>Speaker at an internal CareerBuilder Topic of Interest program on the technical aspects of the SEO improvements</li>
@@ -155,7 +155,7 @@
             </div>
             <div class="small-12 medium-6 large-2 columns" itemprop="address">Atlanta, GA</div>
             <div class="dates small-12 medium-6 large-4 columns"><i>2014-2018 (Anticipated Graduation)</i></div>
-            <div class="degree small-12 columns">Master's in Computer Science</div>
+            <div class="degree small-12 columns">M.S. in Computer Science</div>
             <div class="degree small-12 columns">Interactive Intelligence Specialization</div>
             <div class="small-12 columns horiz-items hide-for-print">
               <span><a href="http://www.news.gatech.edu/features/so-how-about-online-computer-science-degree">So How About That Online Computer Science Degree</a></span>
