--- a/resume/index.html
+++ b/resume/index.html
@@ -78,7 +78,7 @@
                 <li>Managed and mentored a team of 4 Engineers, including mentoring in career path, building skills, interviewing and hiring candidates, regular meetings, giving feedback on performance, elevating performance, and reviewing code</li>
                 <li>Maintained a 50/50 split between coding and managing</li>
                 <li>Served as an Engineering Lead in an unofficial capacity for over a year prior to receiving title</li>
-                <li>Partnered with Product Owners (including Chief Product Officer) to determine feasibility and scope of work on projects</li>
+                <li>Partnered with Product Owners (including Chief Product Officer) to determine feasibility and scope of proposed initiatives</li>
                 <li>Collaborated with other developers to break down projects into manageable, deliverable, and iterable chunks of work</li>
                 <li>Evaluated user reports (in Usabilla and Qualtrix) and Google Analytics numbers to understand pain points and used this information to propose next projects, find bugs, and improve the Jobseeker experience</li>
                 <li>Promoted the code review process, mentoring new hires in the process, training new team members on it, and became the merge master for the department</li>
