--- a/resume/index.html
+++ b/resume/index.html
@@ -23,13 +23,13 @@
           <div class="small-12 large-6 columns">
             <h1><span itemprop="name">Alex Bowers Schoen</span></h1>
           </div>
-           <div class="horiz-items text-bottom small-12 large-6 columns">
+          <div class="horiz-items text-bottom small-12 large-6 columns">
             <span class="contact-info show-for-print"><a href="https://bowersaa.github.io/resume/">Resume</a></span>
             <span class="contact-info hide-for-print" title="@palila on Twitter" rel="me" itemprop="url"><a href="https://twitter.com/Palila">@Palila</a></span>
             <span class="contact-info hide-for-print" title="bowersaa on GitHub" rel="me" itemprop="url"><a href="http://github.com/bowersaa">GitHub</a></span>
           </div>
           
-          <div class="job-title small-12 columns" itemprop="description">Software Engineer with over 10 years of experience in a range of technologies</div>
+          <div class="job-title small-12 columns" itemprop="description">Software Engineer with over 10 years of experience in a range of technologies and leadership, looking for a remote, family-friendly engineering opportunity</div>
         </header>
       </div>
 
@@ -83,11 +83,11 @@
                 <li>Evaluated user reports (in Usabilla and Qualtrix) and Google Analytics numbers to understand pain points and used this information to propose next projects, find bugs, and improve the Jobseeker experience</li>
                 <li>Promoted the code review process, mentoring new hires in the process, training new team members on it, and became the merge master for the department</li>
                 <li>Advocated for mobile first design and reusable, dry CSS</li>
-                <li>Deployed our code on a regular basis to mitigate risk from large deployments, ensure ease of monitoring, and prevent stagnation of approved code</li>
+                <li>Deployed on a regular basis to mitigate risk from large deployments, ensure ease of monitoring, and prevent stagnation of approved code</li>
                 <li>Served as Product Owner at critical times to ensure project success</li>
                 <li>Delivered presentations about key project accomplishments to executives</li>
                 <li>Inherited a new code base </li>
-                <li>Served as the key liaison to our China team to ensure a smooth onboarding experience with our main Ruby code, and served as their technical mentor</li>
+                <li>Acted as the key liaison to our China team to ensure a smooth onboarding experience with our main Ruby code, and served as their technical mentor</li>
                 <li>Pioneered movement in the department to work as a more distributed team</li>
                 <li>Served as the department's main NewRelic contact, including setting up monitoring, general alerting, and creating customized, cross-team PagerDuty alerts in NRQL</li>
                 <li>Created tools for developers to use (one-button deploy to production, internal deploy to shared staging environments, simple viewing of just our Usabilla comments, the addition of cat pictures interspersed within user feedback viewing to help ease the pain of reading user comments...)</li>
@@ -96,21 +96,14 @@
               <ul>
                 <li>Managed the conversion of two of our three top pages (Job Results and Job Details) from our legacy system to the new Ruby on Rails platform. Most notably, made a detailed conversion plan, so we had no drop in indexing from major search engines, and also no major outages as a result of the conversion.</li>
                 <li>Before conversion of the pages, worked to put the previous Job Results page into a sustain mode, overhauling the look, feel, and structure of the page to bring it up to a more modern, readable, and usable state</li>
-              </ul>
-            <div><b>On the SEO Team:</b></div>
-              <ul>
-                <li>Started as the only developer with this team, and grew the team of developers</li>
-                <li>Architected the url structure for the new platform</li>
+                <li>Architected the new url structure during the transition to the new platform</li>
                 <li>Elevated CareerBuilder to the first page of Google results with changes by adding canonical urls, status codes as appropriate, expired tags, and microdata, while also correcting redirect codes and enforcing a url standard</li>
-                <li>Hired and mentored a seasonal intern</li>
               </ul>
             <div><b>Key Skills and Knowledge:</b></div>
               <ul>
-                <li>Languages: Ruby on Rails, C#, .net</li>
-                <li>SASS, CoffeeScript, HAML</li>
-                <li>Tools: GitHub, CodeClimate, NewRelic, Jira, HipChat</li>
-                <li>Processes: Code Reviews, Story Mapping, Scrum, Agile (with many ceremonies), Kanban</li>
-                <li>Migrated major site pages from .net to Ruby on Rails platform</li>
+                <li>Ruby on Rails, C#, .net, SASS, CoffeeScript, HAML</li>
+                <li>GitHub, CodeClimate, NewRelic, Jira, HipChat</li>
+                <li>Code Review, Story Mapping, Scrum, Agile (with many ceremonies), Kanban</li>
               </ul>
           </div>
         </div>
@@ -154,7 +147,7 @@
               <h3><span itemprop="name">Georgia Institute of Technology</span></h3>
             </div>
             <div class="small-12 medium-6 large-2 columns" itemprop="address">Atlanta, GA</div>
-            <div class="dates small-12 medium-6 large-4 columns"><i>2014-2018 (Anticipated Graduation)</i></div>
+            <div class="dates small-12 medium-6 large-4 columns"><i>2014-2019 (Anticipated Graduation)</i></div>
             <div class="degree small-12 columns">M.S. in Computer Science</div>
             <div class="degree small-12 columns">Interactive Intelligence Specialization</div>
             <div class="small-12 columns horiz-items hide-for-print">
