--- a/resume/index.html
+++ b/resume/index.html
@@ -46,7 +46,7 @@
               <div class="location small-12 medium-6 large-2 columns" itemprop="address">Norcross, GA</div>
               <div class="dates small-12 medium-6 large-4 columns"><i>December 2013 - present</i></div>
               <div class="small-12 columns" itemscope itemtype="http://schema.org/Role">
-                <h4 class="job-title" itemprop="roleName">Engineering Lead in Consumer Web Development</h4>
+                <h4 class="job-title" itemprop="roleName">Engineering Lead for CareerBuilder.com</h4>
               </div>
 
               <section class="previous-titles">
@@ -75,7 +75,8 @@
           <div class="job-details small-12 columns" itemprop="description">
             <div><b>Engineering Lead:</b></div>
               <ul>
-                <li>Managed and mentored a team of 4 Engineers, including mentoring in career path, building skills, interviewing and hiring candidates, regular meetings, giving feedback on performance, elevating performance, and reviewing code</li>
+                <li>Managed and mentored a team of 2-5 Engineers, including mentoring in career path, building skills, interviewing and hiring candidates, regular meetings, giving feedback on performance, elevating performance, and reviewing code</li>
+                <li>Responsible for the entire umbrella of both CareerBuilder.com's main jobseeker and hiring.CareerBuilder.com's Employer-facing sites, including managing AWS resources, creating deployment scripts, and managing staging platforms</li>
                 <li>Maintained a 50/50 split between coding and managing</li>
                 <li>Served as an Engineering Lead in an unofficial capacity for over a year prior to receiving title</li>
                 <li>Partnered with Product Owners (including Chief Product Officer) to determine feasibility and scope of proposed initiatives</li>
