--- a/resume/index.html
+++ b/resume/index.html
@@ -48,19 +48,22 @@
               <div class="small-12 columns" itemscope itemtype="http://schema.org/Role">
                 <h4 class="job-title" itemprop="roleName">Senior Software Engineer</h4>
               </div>
-
             </div>  
           </div>
 
           <div class="job-details small-12 columns" itemprop="description">
             <div><b>Senior Software Engineer:</b></div>
               <ul>
-                <li></li>
+                <li>Worked as a part of a remote engineering team focused on job applications, job advertisement, and job board feeds</li>
+                <li>Participated in card grooming, card creation, and agile ceremonies</li>
+                <li>Implemented an Incident Management process for the company, including templated emails and update cadence</li>
+                <li>Led regular reviews of the Incident Management process, including drills, to maintain our knowledge of the process when we had a lack of incidents</li>
+                <li>Started a monthly "Lunch and Games" chat as an opportunity for the fully-remote Engineering team to spend some time socializing and networking with each other</li>
               </ul>
             <div><b>Key Skills and Knowledge:</b></div>
               <ul>
                 <li>Ruby on Rails, React</li>
-                <li>GitHub, CodeShip, NewRelic, Jira, Slack</li>
+                <li>GitHub, CodeShip, NewRelic, Jira, Slack, Zoura</li>
                 <li></li>
               </ul>
           </div>
