Change of plans

--- a/resume/index.html
+++ b/resume/index.html
@@ -29,7 +29,7 @@
             <span class="contact-info hide-for-print" title="bowersaa on GitHub" rel="me" itemprop="url"><a href="http://github.com/bowersaa">GitHub</a></span>
           </div>
           
-          <div class="job-title small-12 columns" itemprop="description">Software Engineer with over 15 years of experience in a range of technologies and leadership, looking for a family-friendly engineering opportunity. Relocating to Auckland, NZ in June 2020 and already hold a work visa.</div>
+          <div class="job-title small-12 columns" itemprop="description">Software Engineer with over 15 years of experience in a range of technologies and leadership, looking for a family-friendly engineering opportunity.</div>
         </header>
       </div>
 
